fixed spacing issue

--- a/index.css
+++ b/index.css
@@ -138,7 +138,7 @@ p {
     }
     .intro {
         line-height: 120%;
-        margin-left: 10%;
+        margin-left: 15%;
         margin-right: 5%;
         justify-content: center;
         align-items: center;
